# DynamicConnectivity

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.cc  orkut_insertion_profile.txt  orkut_profile.txt  s  test_vector.txt  test_vector_alloc.txt  test_vector_parlay.txt
benchmark/: CMakeLists.txt  bench_all.hpp  bench_batch_size.cc  bench_dynamic.cc  bench_rmat.cc  bench_rwg.cc  bench_static_connectivity.cc
benchmark/SeqBlockedForest/: CMakeLists.txt  SeqBF.hpp  SeqBlockedForest.cc  leaf.hpp  localTree.hpp  rankArr.hpp  rankTree.hpp  stats.hpp  test_insert.cc  test_leaf.cc  test_rank.cc
benchmark/bench_distance_query/: CMakeLists.txt  data_generator.hpp  graph_decode.cc
benchmark/par_cf/: CMakeLists.txt  cf_node.h  lt_array.h  par_cf.cc
benchmark/seq_arr/: CMakeLists.txt  blocked_arr copy.hpp  blocked_arr.hpp  cluster_graph.hpp  leaf.hpp  seq_arr.cc  stats.hpp  test_arr.cc  test_cg.cc  test_leaf.cc
benchmark/seq_cf/: CMakeLists.txt  leaf.hpp  seq_cf.cc  test_leaf.cc
benchmark/seq_hdt/dynamic_graph/: CMakeLists.txt
benchmark/seq_hdt/dynamic_graph/benchmark/: CMakeLists.txt  seq_hdt.cc
benchmark/seq_hdt/dynamic_graph/include/dynamic_graph/: dynamic_connectivity.hpp  graph.hpp
benchmark/seq_hdt/dynamic_graph/src/: dynamic_connectivity.cpp  dynamic_forest.cpp  dynamic_forest.hpp  sequence.cpp  sequence.hpp
benchmark/seq_hdt/utilities/: CMakeLists.txt
benchmark/seq_hdt/utilities/include/utilities/: assert.hpp
benchmark/seq_localtree/: CMakeLists.txt  CWN.hpp  SCCWN.hpp  bitmap.hpp  cluster_forest.hpp  cluster_nv.hpp  leaf.hpp  localTree.hpp  localTreeNode.hpp  rankArr.hpp  rankTree.hpp  seq_localtree.cc  stats.hpp  test_insert.cc  test_rank.cc
benchmark/static_connectivity/: CMakeLists.txt  static_connectivity.cc
include/dycon/helpers/: assert.hpp  atomics.hpp  graph_utils.hpp  parse_command_line.hpp  union_find.hpp
include/dycon/localTree/: CWN.hpp  SCCWN.hpp  alloc.h  edgeset.hpp  fetchQueue.hpp  graph.hpp  leaf.h  leaf.hpp  localTree.hpp  rankTree.hpp
include/dycon/parlayhash/: bigatomic.h  epoch.h  lock.h  parallel.h  parlay_hash.h  unordered_set.h
include/dycon/psl/: augmented_skip_list.hpp  concurrent_array_allocator.hpp  skip_list.hpp
scripts/: 0.1m.txt  1000000lca.txt  Aug16  Aug16.1  Sep16.txt  Sep19.txt  Sep9BatchDel.txt  Sep9Early.txt  Sep9Mid.txt  batch_size  bench_all.sh  bench_batch_size.sh  bench_dynamic.sh  bench_knn.sh  bench_real_world_graph.sh  bench_rmat.sh  bench_static_connectivity.sh  hdt_benchmark.sh  run_seq_arr.sh  run_seq_hdt.sh  run_seq_localtree.sh  run_static.sh  twitter.txt
stat/: time.txt
stat/HouseHold5_diameter/: compressed_block.csv
stat/diameter/CHEM_5/: CHEM_5_sym_compressed_blocked_diameter.csv  CHEM_5_sym_compressed_lca_diameter.csv
stat/diameter/Household_lines_5/: Household_lines_5_sym_compressed_blocked_diameter.csv  Household_lines_5_sym_compressed_lca_diameter.csv  Household_lines_5_sym_compressed_root_diameter.csv
stat/diameter/grid/: grid_1000_10000_03_sym_compressed_blocked_diameter.csv  grid_1000_10000_03_sym_compressed_lca_diameter.csv  grid_1000_10000_03_sym_uncompressed_root_diameter.csv
stat/fanout/CHEM_5/: CHEM_5_sym_compressed_blocked_fanout.csv  CHEM_5_sym_compressed_lca_fanout.csv  CHEM_5_sym_compressed_root_fanout.csv  CHEM_5_sym_uncompressed_blocked_fanout.csv  CHEM_5_sym_uncompressed_root_fanout.csv
stat/fanout/Household_lines_5/: Household_lines_5_sym_compressed_blocked_fanout.csv  Household_lines_5_sym_compressed_lca_fanout.csv  Household_lines_5_sym_compressed_root_fanout.csv  Household_lines_5_sym_uncompressed_blocked_fanout.csv  Household_lines_5_sym_uncompressed_root_fanout.csv
stat/fanout/grid/: grid_1000_10000_03_sym_compressed_blocked_fanout.csv  grid_1000_10000_03_sym_compressed_lca_fanout.csv  grid_1000_10000_03_sym_compressed_root_fanout.csv  grid_1000_10000_03_sym_uncompressed_blocked_fanout.csv  grid_1000_10000_03_sym_uncompressed_root_fanout.csv
stat/number_nodes_explored_deletion/CHEM_5/: CHEM_5_sym_compressed_root_number_nodes_explored_deletion.csv  CHEM_5_sym_uncompressed_root_number_nodes_explored_deletion.csv  CHEM_5_sym_uncomrpessed_blocked_number_nodes_explored_deletion.csv
stat/number_nodes_explored_deletion/Household_lines_5/: Household_lines_5_sym_uncompressed_root_number_nodes_explored_deletion.csv  Household_lines_5_sym_uncomrpessed_blocked_number_nodes_explored_deletion.csv
stat/number_nodes_explored_deletion/grid/: grid_1000_10000_03_sym_compressed_root_number_nodes_explored_deletion.csv  grid_1000_10000_03_sym_uncomrpessed_blocked_number_nodes_explored_deletion.csv
stat/pathLenWORT/CHEM_5/: CHEM_5_sym_compressed_blocked_woranktree.csv  CHEM_5_sym_compressed_lca_woranktree.csv  CHEM_5_sym_compressed_root_woranktree.csv  CHEM_5_sym_uncomrpessed_blocked_woranktree.csv
stat/pathLenWORT/Household_lines_5/: Household_lines_5_sym_compressed_blocked_woranktree.csv  Household_lines_5_sym_compressed_lca_woranktree.csv  Household_lines_5_sym_compressed_root_woranktree.csv  Household_lines_5_sym_uncompressed_root_woranktree.csv
stat/pathLenWORT/grid/: grid_1000_10000_03_sym_compressed_blocked_woranktree.csv  grid_1000_10000_03_sym_compressed_lca_woranktree.csv  grid_1000_10000_03_sym_compressed_root_woranktree.csv  grid_1000_10000_03_sym_uncompressed_root_woranktree.csv
stat/pathLenWRT/CHEM_5/: CHEM_5_sym_compressed_blocked_wranktree.csv  CHEM_5_sym_compressed_lca_wranktree.csv  CHEM_5_sym_compressed_root_wranktree.csv  CHEM_5_sym_uncompressed_root_wranktree.csv  CHEM_5_sym_uncomrpessed_blocked_wranktree.csv
stat/pathLenWRT/Household_lines_5/: Household_lines_5_sym_compressed_blocked_wranktree.csv  Household_lines_5_sym_compressed_lca_wranktree.csv  Household_lines_5_sym_compressed_root_wranktree.csv  Household_lines_5_sym_uncompressed_root_wranktree.csv  Household_lines_5_sym_uncomrpessed_blocked_wranktree.csv
tests/: CMakeLists.txt
tests/localtree/: CMakeLists.txt  test_cwn_insert.cc  test_edge_block.cc  test_edgeset.cc  test_example.cc  test_leaf.cc  test_rank.cc
tests/parlayhash/: CMakeLists.txt  example.cc
(+5 files in other folders)
