add_subdirectory(seq_hdt)
add_executable(bench_static_connectivity bench_static_connectivity.cc)
target_link_libraries(bench_static_connectivity PRIVATE dycon )
add_executable(bench_dynamic bench_dynamic.cc)
target_link_libraries(bench_dynamic PRIVATE dycon lib_dynamic_connectivity)
target_include_directories(bench_dynamic PRIVATE seq_hdt/include)
